<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/imagem"
        android:src="@drawable/logo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagem"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        android:textSize="17sp"
        android:textColor="@color/text"
        android:hint="@string/user"
        android:textColorHint="@color/field"
        android:backgroundTint="@color/text"/>

    <EditText
        android:id="@+id/senha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:textColor="@color/text"
        android:textSize="17sp"
        android:hint="@string/passw"
        android:textColorHint="@color/field"
        android:backgroundTint="@color/text"/>

    <Button
        android:id="@+id/entrar"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/senha"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:background="@color/button"
        android:clickable="true"
        android:onClick="entrar"
        android:text="@string/entrar"
        android:textSize="17dp" />

    <Button
        android:id="@+id/cadastrar"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/entrar"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@color/button"
        android:clickable="true"
        android:onClick="cadastrar"
        android:text="@string/cadastrar"
        android:textSize="17dp" />

</RelativeLayout>
