<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.HomeActivity">


    <TextView
        android:id="@+id/txts1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="170dp"
        android:text="@string/txts1"
        android:textColor="@color/text"
        android:textSize="30dp"/>

    <Button
        android:id="@+id/atualizar"
        android:background="@drawable/refresh"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:clickable="true"
        android:onClick="atualizar"/>

    <TextView
        android:id="@+id/txts2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="170dp"
        android:text="@string/txts1"
        android:textColor="@color/text"
        android:textSize="30dp"/>

    <ImageView
        android:id="@+id/card01"
        android:src="@drawable/bom"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="45dp"/>

    <ImageView
        android:id="@+id/card02"
        android:src="@drawable/legal"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="235dp"
        android:layout_marginLeft="45dp"/>

    <Button
        android:id="@+id/addC"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="30dp"
        android:text="@string/addC"
        android:textSize="17dp"
        android:textColor="@android:color/white"
        android:background="@drawable/drw_btn_back"
        android:clickable="true"
        android:enabled="false"
        android:onClick="addCard"/>

    <Button
        android:id="@+id/recarregar"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="170dp"
        android:text="@string/recarregar"
        android:textSize="17dp"
        android:textColor="@android:color/white"
        android:background="@drawable/drw_btn_back"
        android:clickable="true"
        android:onClick="recarregar"/>

    <TextView
        android:id="@+id/saldo1Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="180dp"
        android:backgroundTint="@color/text"
        android:hint="@string/saldo1Home"
        android:textColorHint="@color/text"
        android:textColor="@color/text"
        android:textSize="22dp"/>

    <TextView
        android:id="@+id/saldo2Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="180dp"
        android:backgroundTint="@color/text"
        android:hint="@string/saldo2Home"
        android:textColorHint="@color/text"
        android:textColor="@color/text"
        android:textSize="22dp"/>

</RelativeLayout>