<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/esq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text"
        android:text="@string/esq"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/esq"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text"
        android:text="@string/txt1"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt1"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:backgroundTint="@color/text"/>

    <Button
        android:id="@+id/enviar"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/email"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:background="@color/button"
        android:text="@string/enviar"
        android:textSize="17dp"
        android:clickable="true"
        android:onClick="recSenha"/>


</RelativeLayout>